AC_INIT([gtkaml],[0.3.9.])

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_PROG_CC
AC_DISABLE_STATIC
AC_PROG_LIBTOOL


AC_PATH_PROG(VALAC, valac, valac)
AC_SUBST(VALAC)

AC_SUBST(CFLAGS)
AC_SUBST(LDFLAGS)

#similar to CFLAGS, use VALAFLAGS from environment
AC_DEFINE([VALAFLAGS], VALAFLAGS, "valac flags")

AC_HEADER_STDC

PKG_CHECK_MODULES([GLIB], glib-2.0 >= 2.12.0)
AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)

PKG_CHECK_MODULES([GTK], gtk+-2.0)
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)

PKG_CHECK_MODULES([LIBXML2], libxml-2.0)
AC_SUBST(LIBXML2_CFLAGS)
AC_SUBST(LIBXML2_LIBS)

PKG_CHECK_MODULES(VALA, vala-1.0 >= 0.7.3)
AC_SUBST(VALA_CFLAGS)
AC_SUBST(VALA_LIBS)

AC_CONFIG_FILES([
Makefile
src/Makefile
libgtkaml/Makefile
])

AC_OUTPUT
